added Nass error colour

--- a/CheckYourEligibility-Parent/Views/Check/Nass.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Nass.cshtml
@@ -61,7 +61,7 @@
                                 <p class="govuk-error-message">
                                     <span asp-validation-for="NationalAsylumSeekerServiceNumber"></span>
                                 </p>
-                                <input class="govuk-input govuk-!-width-one-third" asp-for="NationalAsylumSeekerServiceNumber" type="text" inputmode="numeric" maxlength="10" spellcheck="false" aria-describedby="nass-number-entered-hint" autocomplete="text">
+                                <input class="govuk-input govuk-!-width-one-third @(ViewData.ModelState["NationalAsylumSeekerServiceNumber"]?.Errors.Count > 0 ? "govuk-input--error" : "")" asp-for="NationalAsylumSeekerServiceNumber" type="text" inputmode="numeric" maxlength="10" spellcheck="false" aria-describedby="nass-number-entered-hint" autocomplete="text">
                             </div>
                         </div>
 
