--- a/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
@@ -121,7 +121,7 @@
                         <p class="govuk-error-message">
                             <span asp-validation-for="NationalInsuranceNumber"></span>
                         </p>
-                        <input class="govuk-input govuk-!-width-one-third" asp-controller="Check" asp-for="NationalInsuranceNumber" type="text" spellcheck="false" aria-describedby="ni-number-entered-hint" autocomplete="text" aria-label="Your National Insurance Number">
+                        <input class="govuk-input govuk-!-width-one-third" asp-controller="Check" asp-for="NationalInsuranceNumber" type="text" spellcheck="false" aria-describedby="ni-number-entered-hint" autocomplete="text" aria-label="Your National Insurance number">
                     </div>
                 </div>
                 <div class="govuk-radios__item">
