--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Enter_Details.cshtml
@@ -100,7 +100,7 @@
 
             <div class="govuk-radios" data-module="govuk-radios">
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" asp-for="IsNassSelected" type="radio" value="false" aria-controls="conditional-ni-number" aria-expanded="false">
+                    <input class="govuk-radios__input" asp-for="NinAsrSelection" type="radio" value="NinSelected" aria-controls="conditional-ni-number" aria-expanded="false">
                     <label class="govuk-label govuk-radios__label" for="ni-number">
                         Yes
                     </label>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" asp-for="IsNassSelected" type="radio" value="true">
+                    <input class="govuk-radios__input" asp-for="NinAsrSelection" type="radio" value="AsrnSelected">
                     <label class="govuk-label govuk-radios__label" for="ni-number-2">
                         No, I do not have one
                     </label>
