--- a/CheckYourEligibility-Admin/wwwroot/css/site.css
+++ b/CheckYourEligibility-Admin/wwwroot/css/site.css
@@ -184,3 +184,14 @@ img, svg {
     }
 }
 /*END - Header overrides */
+
+
+/*BEGIN - Child Details form title width extention override */
+
+@media (min-width: 40.0625em) {
+    .govuk-summary-list__key {
+        width: 45%; /*to fit NIN/ASRN title*/
+    }
+}
+
+/*END - Child Details form title width extention override */
