updated enter details changes for School admin journey

--- a/CheckYourEligibility-Admin/Views/Shared/_ValidationSummary.cshtml
+++ b/CheckYourEligibility-Admin/Views/Shared/_ValidationSummary.cshtml
@@ -34,6 +34,7 @@
 
             return propertyOrder.IndexOf(extractedPropertyName);
         })
+        .DistinctBy(e => e.Error)
         .ToList();
 }
 
