Alteration to Validation to catch Nino/Nass errors. Separated validation for IsNinoSelected so errors can be displayed in corret location

--- a/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
@@ -100,7 +100,7 @@
             <div id="ni-number-hint" class="govuk-hint">
                 It’s on your National Insurance card, payslip, P60 or letters about tax, pension and benefits.
             </div>
-
+            <span asp-validation-for="IsNinoSelected" class="govuk-error-message"></span>
             <div class="govuk-radios" data-module="govuk-radios">
                 <div class="govuk-radios__item">
                     <input class="govuk-radios__input" asp-for="IsNinoSelected" type="radio" value="true" aria-controls="conditional-ni-number" aria-expanded="false" aria-label="Yes">
