--- a/CheckYourEligibility-Parent/wwwroot/css/application.css
+++ b/CheckYourEligibility-Parent/wwwroot/css/application.css
@@ -3461,20 +3461,15 @@ p + .govuk-heading-s,
 }
 
 .govuk-footer__copyright-logo {
-  display: inline-block;
-  min-width: 125px;
-  padding-top: 112px;
-  background-image: url("../assets/images/govuk-crest.png");
-  background-repeat: no-repeat;
-  background-position: 50% 0%;
-  background-size: 125px 102px;
-  text-align: center;
-  white-space: nowrap;
-}
-@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
-    .govuk-footer__copyright-logo {
-        background-image: url("../assets/images/govuk-crest-2x.png");
-    }
+    display: inline-block;
+    min-width: 125px;
+    padding-top: 112px;
+    background-image: url(/assets/images/govuk-crest.svg);
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-size: 125px 102px;
+    text-align: center;
+    white-space: nowrap
 }
 
 .govuk-footer__inline-list {
