Content and style changes for Check answers page.

--- a/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
@@ -17,7 +17,7 @@
     <partial name="_ValidationSummary" model="ViewData.ModelState" />
 }
 
-<h1 class="govuk-heading-l">Check your answers before registering</h1>
+<h1 class="govuk-heading-l">Check your answers before sending</h1>
 
 <div class="govuk-summary-card">
     <div class="govuk-summary-card__title-wrapper">
@@ -31,7 +31,7 @@
 
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Parent or guardian name
+                    Name
                 </dt>
                 <dd class="govuk-summary-list__value">
                     @Model.ParentFirstName @Model.ParentLastName
@@ -40,7 +40,7 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Parent or guardian date of birth
+                    Date of birth
                 </dt>
                 <dd class="govuk-summary-list__value">
                     @formattedParentDOB
@@ -107,10 +107,8 @@
         <div class="govuk-summary-card__content">
             <dl class="govuk-summary-list">
                 <div class="govuk-summary-list__row">
-                </div>
-                <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        Child's name
+                        Name
                     </dt>
                     <dd class="govuk-summary-list__value">
                         @Model.Children.ChildList[i].FirstName @Model.Children.ChildList[i].LastName
@@ -129,7 +127,7 @@
 
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        Child's date of birth
+                        Date of birth
                     </dt>
                     <dd class="govuk-summary-list__value">
                         @formattedChildDob
@@ -143,7 +141,7 @@
 <h2 class="govuk-heading-m">Confirm details and send to the school</h2>
 
 <p class="govuk-body">By sending this information on to the school you confirm that, to the best of your knowledge, it is correct.</p>
-<p>Your details are only used to register and will not be stored.</p>
+<p>Your details are only used to apply for free school meals and will not be stored.</p>
 
 <form asp-action="Check_Answers" asp-controller="Check" method="post" novalidate="">
     <!-- Parent Details -->
@@ -167,7 +165,7 @@
     }
 
             <button type="submit" class="govuk-button govuk-!-margin-top-5" data-module="govuk-button">
-                Submit application
+                Send to the school
             </button>
         </form>
     </div>
