--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailLa.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailLa.cshtml
@@ -7,39 +7,27 @@
 <main class="govuk-main-wrapper" id="main-content">
     <div class="govuk-grid-row govuk-!-margin-bottom-5">
         <div class="govuk-grid-column-full">
-            <div class="moj-page-header-actions">
-                <div class="moj-page-header-actions">
-
+            <div class="moj-page-header-actions whitespaceDelete">
+                <div class="moj-page-header-actions whitespaceDelete">
                     <div class="moj-page-header-actions__title">
                         <h1 class="govuk-heading-xl">@Model.ParentName</h1>
                     </div>
 
-
-                    <div class="moj-page-header-actions__actions">
-
-
+                    <div class="moj-page-header-actions__actions whitespaceDelete">
                         <div class="moj-button-menu">
                             <div class="moj-button-menu__wrapper">
                                 @Html.ActionLink("Approve application", "ApproveConfirmation", "application", new { id = Model.Id }, new { @class = "govuk-button govuk-button--primary moj-button-menu__item" })
                                 @Html.ActionLink("Decline application", "DeclineConfirmation", "application", new { id = Model.Id }, new { @class = "govuk-button govuk-button--secondary moj-button-menu__item" })
-                      
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="moj-page-header-actions__actions">
-                   <div class="moj-button-menu">
-                        <div class="moj-button-menu__wrapper"></div>
-                    </div>
                 </div>
             </div>
-          
         </div>
-
     </div>
 
     @Html.Partial("ApplicationDetailPartial", Model)
- 
+
 </main>
 
